# oragami

./: .gitignore  DEMO_GUIDE.md  FIREBLOCKS_COMPREHENSIVE_RESEARCH.md  FRONTEND_FLOW.md  INVESTOR_AND_INSTITUTION_VALUE.md  ISSUE.md  PITCH.md  PRODUCTION_PLAN.md  README.md  SOLICTICE.md  SPEC.md  STRATEGY.md  bastion  candidfinance  vaultox
backend/: mock-server.js  package-lock.json
backend/compliance-relayer/: .env.example  Cargo.toml
backend/compliance-relayer/src/: main.rs
backend/compliance-relayer/src/api/: mod.rs  router.rs  six.rs  vault.rs
backend/compliance-relayer/src/app/: state.rs
backend/compliance-relayer/src/infra/six/: mod.rs
docs/: ISSUE.md  PROJECT_PROGRESS.md  SPEC.md  STRATEGY.md
frontend/relayer-frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/relayer-frontend/scripts/: init-vault.ts
oragami-asset/: Anchor.toml
oragami-asset/programs/oragami-asset/: Cargo.toml
oragami-backend/: .env.example  docker-compose.yml  package-lock.json  package.json  prisma.config.ts
oragami-backend/prisma/: schema.prisma  seed.ts
oragami-backend/scripts/: init-vault.ts  test-set-nav.ts
oragami-backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts
oragami-backend/src/common/: encoding.spec.ts  encoding.ts
oragami-backend/src/crank/: crank.module.ts  nav-crank.service.spec.ts  nav-crank.service.ts
oragami-backend/src/credentials/: credentials.controller.ts  credentials.module.ts  credentials.service.spec.ts  credentials.service.ts
oragami-backend/src/data/: data.module.ts  six.service.live.spec.ts  six.service.mtls.spec.ts  six.service.spec.ts  six.service.ts
oragami-backend/src/deposits/: deposits.controller.ts  deposits.module.ts  deposits.service.spec.ts  deposits.service.ts
oragami-backend/src/health/: crank-state.service.ts  health.controller.ts  health.module.ts  health.service.spec.ts  health.service.ts
oragami-backend/src/multi-asset-vault/: multi-asset-vault.controller.ts  multi-asset-vault.module.ts  multi-asset-vault.service.ts  multi_asset_vault.idl.json
oragami-backend/src/prisma/: prisma.service.ts
oragami-backend/src/solana/: anchor.service.ts  oragami_vault.types.ts  solana.module.ts  solstice.service.ts
oragami-backend/src/travel-rule/: travel-rule.controller.ts  travel-rule.module.ts  travel-rule.service.spec.ts  travel-rule.service.ts
oragami-backend/src/vault/: vault.controller.ts  vault.module.ts  vault.service.spec.ts  vault.service.ts
oragami-backend/test/: app.e2e-spec.ts  jest-e2e.json  setup.ts
oragami-frontend/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
oragami-frontend/app/: layout.tsx  page.tsx
oragami-frontend/app/app/: page.tsx
oragami-frontend/app/onboard/: layout.tsx
oragami-frontend/components/app/: agent-stream.tsx  icp-form.tsx  leads-table.tsx  search-bar.tsx
oragami-frontend/features/risk-scanner/: index.ts  (+6 more)
oragami-frontend/lib/: constants.ts  embeddings.ts  mongodb.ts  tinyfish.ts
oragami-frontend/services/: risk-check.ts  vault-operations.ts
oragami-frontend/types/: risk-check.ts
oragami-vault/: .pnp.cjs  Anchor.toml  multi-asset-manifest.json  package.json
oragami-vault/scripts/: deploy-devnet.sh  setup-multi-asset-vault.ts
oragami-vault/tests/: oragami-vault.ts
programs/cvault-transfer-hook/: Anchor.toml
programs/cvault-transfer-hook/programs/cvault-transfer-hook/: Cargo.toml
programs/cvault-transfer-hook/programs/cvault-transfer-hook/src/: lib.rs
six-data-cert/: CSR.pem  certificate.p12  password.txt  private-key.pem  signed-certificate.pem
(+64 files in other folders)
