[package]
name = "cvault-transfer-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
overflow-checks = true
